--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div class="buttons">
             <button class="red">C</button>
+            <button class="red">^</button>
             <button class="red">%</button>
             <button class="red">/</button>
-            <button class="red">x</button>
 
             <button>7</button>
             <button>8</button>
@@ -31,11 +31,11 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>=</button>
+            <button class="red">x</button>
 
-            <button>0</button>
+            <button class="zero">0</button>
             <button>.</button>
-            <button>^</button>
+            <button>=</button>
         </div>
     </div>
 </body>
