--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="buttons">
             <button class="red" onclick="limpar()">C</button>
-            <button class="red" onclick="back()">^</button>
+            <button class="red" onclick="back()"><img src="apagar.png" alt="icone de apagar"></button>
             <button class="red" onclick="insert('%')">%</button>
             <button class="red" onclick="insert('/')">/</button>
 
